# libc4life

./: #todo.org#  .#todo.org  CMakeLists.txt  README.md  malloc_perf.txt  todo.org
src/: c4.c  c4.h  col.c  col.h  coro.h  ctx.c  ctx.h  defer.h  err.c  err.h  ls.c  ls.h  macros.h  map.c  map.h  mpool.c  mpool.h  rec.c  rec.h  seq.c  seq.h  slab.c  slab.h  tbl.c  tbl.h  timer.c  timer.h  uid.c  uid.h  utils.c  utils.h  val.c  val.h
src/cols/: str_col.c  str_col.h
src/db/: col.c  col.h  rec.c  rec.h  tbl.c  tbl.h
src/db/cols/: str_col.c  str_col.h
src/mem/: malloc.c  malloc.h  malloc_example.c  malloc_example.h  mfreel.c  mfreel.h  mpool.c  mpool.h  mslab.c  mslab.h
src/seqs/: bmap.c  bmap.h  bset.c  bset.h  dyna.c  dyna.h  ls.c  ls.h  map.c  map.h  pair.c  pair.h  slab.c  slab.h
tests/: main.c  malloc_perf.c
